--- a/ClassesinJAVA.lang/.project
+++ b/ClassesinJAVA.lang/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ArrayList</name>
+	<name>ClassesinJAVA.lang</name>
 	<comment></comment>
 	<projects>
 	</projects>
